--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,373 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
+nav{
+	display:flex;
+	justify-content:space-evenly;
+	width:100%;
+	margin-bottom:100px;
+}
+
+nav a{
+	align-items:center;
+}
+
+
+.main-header{
+	margin:10px;
+	display:flex;
+	justify-content:center;
+}
+
+.header-left{
+	display:flex;
+	font-size:64px;
+	justify-content:center;
+	flex-direction:column;
+}
+
+.header-left h1{
+	display:flex;
+	align-items:center;
+}
+
+
+.header-left button{
+	border:1px solid grey;
+	font-size:20px;
+	align-self:center;
+	margin:10px;
+}
+
+.header-right{
+	display:flex;
+	margin-left:60px;
+}
+
+
+
+.ctaright{
+	display:flex;
+}
+
+.middle-container{
+	display:flex;
+	margin-bottom:20px;
+}
+
+.middle-img{
+	display:flex;
+}
+
+.bottom-container{
+	display:flex;
+	justify-content:space-between;
+	margin:50px 10px;
+}
+
+.footer-text{
+	display:flex;
+	justify-content:center;
+}
+
+.logoMOB{
+    display:none;
+}
+
+
+@media screen and (max-width: 800px){
+    .logoMOB{
+        display:flex;
+        justify-content: center;
+        margin:15px 0px;
+    }
+    .logo{
+        display:none;
+    }
+    .header-right{
+        display:none;
+    }
+    .nav{
+        display:flex;
+        justify-content: space-evenly;
+    }
+    .child1{
+        margin-right:20px;
+    }
+    .child2{
+        margin-right:20px;
+    }
+    .bottom-container{
+        display:flex;
+        justify-content:space-evenly;
+    }
+    .container{
+        margin:0px 60px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.container{
+	border: 1px solid white;
+	margin: 0px 195px;
+}
+
+nav{
+	display:flex;
+	justify-content:space-evenly;
+	width:100%;
+	margin-bottom:20px;
+}
+
+nav a{
+	display:flex;
+    align-items:center;
+    text-decoration: none;
+}
+
+.headerimg{
+	
+	display:flex;
+	justify-content: center;
+}
+
+
+
+.midhead{
+	margin:30px 0px;
+}
+.midhead p{
+	letter-spacing: 1px;
+}
+
+.boxes{
+	
+	display:flex;
+	flex-wrap:wrap;
+	margin: 20px 0px;
+}
+
+.bigbox1{
+	display:flex;
+	justify-content:space-between;
+	align-items:space-evenly;
+}
+
+.box1{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.box1 h2,p,button{
+	display:flex;
+}
+
+.box2{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.bigbox2{
+	display:flex;
+	justify-content:space-between;
+}
+
+.box3{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.box4{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.bigbox3{
+	display:flex;
+	justify-content:space-between;
+}
+
+.box5{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.box6{
+	border:1px solid black;
+	background-color:lightgrey;
+	margin:25px;
+	padding:15px;
+}
+
+.part2{
+	display:flex;
+	justify-content:space-between;
+	margin:20px;
+}
+
+.facts p{
+	margin: 20px 0px;
+}
+
+.bottom{
+	display:flex;
+	justify-content:center;
+}
+
+@media screen and (max-width: 800px){
+    .logoMOB{
+        display:flex;
+        justify-content: center;
+        margin:15px 0px;
+    }
+    .logo{
+        display:none;
+    }
+    .header-right{
+        display:none;
+    }
+    .nav{
+        display:flex;
+        justify-content: space-evenly;
+    }
+    .features{
+        margin-right:20px;
+    }
+    .child1{
+        margin-right:20px;
+    }
+    .child2{
+        margin-right:20px;
+    }
+    .bottom-container{
+        display:flex;
+        justify-content:space-evenly;
+    }
+    .container{
+        margin:0px 60px;
+    }
+    .middle-img{
+        max-width:100%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .middle-container{
+        flex-direction:column;
+    }
+    .features{
+        margin:30px 0px;
+    }
+    
+    .bottom-container{
+        flex-direction:column;
+    }
+    .child1{
+        margin-bottom:30px;
+    }
+    .child2{
+        margin-bottom:30px;
+    }
+    nav{
+        flex-direction:column;
+        align-items: center;
+    }
+}
+
 
